package ar.edu.utn.ba.ddsi.smartlife.trends_service.models.entities.comercio;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Comercio {

	private Long id;
	private String nombre;
}
