@startuml
' https://plantuml.com/class-diagram
' Solo capa de dominio: models.entities (tal como está en código)

package "entities.comercio" {
  class Comercio <<entity>> {
    - id: Long
    - nombre: String
    ..
    <<get/set Lombok>>
  }
}

package "entities.producto" {
  class Producto <<entity>> {
    - id: Long
    - comercio: Comercio
    - nombre: String
    - categoria: String
    - precioBase: double
    - ventasAcumuladas: int
    - likes: int
    - dislikes: int
    - fechaUltimaVenta: LocalDateTime
    - promocionBloqueadaPorDislikes: boolean
    - estado: EstadoTendencia
    --
    + Producto()
    --
    + registrarVenta(cantidad: int): void
    + recibirLike(): void
    + recibirDislike(): void
    + detalle(): String
    ..
    <<get/set Lombok>>
  }
}

package "entities.tendencia" {
  abstract class EstadoTendencia <<abstract>> {
    - ventasIniciales: long
    - likesIniciales: long
    - dislikesIniciales: long
    --
    <<abstract>>
    + {abstract} leyenda(producto: Producto): String
    + {abstract} icono(): Icono
    + {abstract} etiqueta(): String
    + {abstract} likePara(producto: Producto): void
    + {abstract} dislikePara(producto: Producto): void
    + {abstract} nuevaVentaDe(producto: Producto): void
    --
    + {final} detalle(producto: Producto): String
    --
    <<protected final>>
    # iniciarDesde(producto: Producto): void
    # ventasEnEsteEstado(producto: Producto): long
    # likesEnEsteEstado(producto: Producto): long
    # dislikesEnEsteEstado(producto: Producto): long
    # cambiarEstado(producto: Producto, nuevoEstado: EstadoTendencia): void
    # {static} formatoPrecio(precioBase: double): String
  }

  class Normal <<final>> {
    {static} - ventasMinimasParaAscender: int
    ..
    <<@Setter estático>>
    --
    + icono(): Icono
    + leyenda(producto: Producto): String
    + etiqueta(): String
    + likePara(producto: Producto): void
    + dislikePara(producto: Producto): void
    + nuevaVentaDe(producto: Producto): void
  }

  class EnAuge <<final>> {
    {static} - ventasMinimasParaAscender: int
    {static} - likesMinimasParaAscender: int
    {static} - likesMinimosParaDescender: int
    ..
    <<@Setter en cada estático>>
    --
    - cumpleParaEnTendencia(producto: Producto): boolean
    - promoverSiCorresponde(producto: Producto): void
    --
    + icono(): Icono
    + leyenda(producto: Producto): String
    + etiqueta(): String
    + likePara(producto: Producto): void
    + dislikePara(producto: Producto): void
    + nuevaVentaDe(producto: Producto): void
  }

  class EnTendencia <<final>> {
    - volverANormalSiNoTieneVentasRecientes(producto: Producto): void
    --
    + icono(): Icono
    + leyenda(producto: Producto): String
    + etiqueta(): String
    + likePara(producto: Producto): void
    + dislikePara(producto: Producto): void
    + nuevaVentaDe(producto: Producto): void
  }

  class Icono <<final>> {
    {static} + CHART: Icono
    {static} + ROCKET: Icono
    {static} + FIRE: Icono
    - internalEncoding: int[]
    --
    <<private ctor>>
    - Icono(internalEncoding: int[])
    --
    + texto(): String
  }

  Normal --|> EstadoTendencia
  EnAuge --|> EstadoTendencia
  EnTendencia --|> EstadoTendencia
}

Producto "*" --> "1" Comercio : comercio
Producto "*" --> "1" EstadoTendencia : estado
EstadoTendencia ..> Icono
EstadoTendencia ..> Producto : parámetro

@enduml
